5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1592_1806.log
== SUBMITION (2019-03-26 12:33:26) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(round(f,2))
-- EXECUTION TIME:
0.121912
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:33:41) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(round(f,2))aniversário juntas.


-- ERROR:
File "XXXX", line 4
    print(round(f,2))aniversário juntas.
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:33:52) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(round(f,2))


-- EXECUTION TIME:
0.203182
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:33:54) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(round(f,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:34:12) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print(round(f,2))


-- EXECUTION TIME:
0.224635
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:36:30) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print((float(round(f,2)))


-- EXECUTION TIME:
0.136888
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 6
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:38:16) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print((float(round(f,2)))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:38:21) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print((float(round(f,2)))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:38:33) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print((float(round(f,2))
-- ERROR:
File "XXXX", line 5
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:38:42) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print((float(round(f,2)))
-- ERROR:
File "XXXX", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:05) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n

-- ERROR:
File "XXXX", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:21) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print(f)
-- OUTPUT:
0.16702478883806438
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:47) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print(round(f,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:56) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print(round(f,4))
-- OUTPUT:
0.167
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:40:12) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print(round(f,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:41:47) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-factorial(365)/factorial(365-n)*1/365**n
print(round(f,2)*1)
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:42:17) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(round(f,2)*1)
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:42:33) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(round(f,2))
-- EXECUTION TIME:
0.182388
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:00) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(float(round(f,2)))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:20) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(float(round(f,2)))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:43:26) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= 1-(factorial(365)/factorial(365-n))*1/365**n
print(float(round(f,2)))
-- EXECUTION TIME:
0.209052
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:30:33) 
-- CODE:
from math import*
n=int(input("Numero de pessoas da sala:"))
f= (1-(factorial(365)/factorial(365-n))*1/365**n)*100
print(float(round(f,2)))

-- EXECUTION TIME:
0.220703
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
